--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,10 @@
 <div class="container">
-  <h2> Exibindo condicionalmente com as diretivas ngif e hidden</h2>
+  <h2> Iterando com a diretiva ngFor</h2>
     <div class="jumbotron">
         <div class="alert alert-success" role="alert" *ngIf="adicionado">
             Funcionário adicionado: <strong>{{nome}}</strong>
         </div>
-        <!--
-        <div class="alert alert-success" role="alert" [hidden]="!adicionado">
-            Funcionário adicionado: <strong>{{nome}}</strong>
-        </div>
-        -->
+
           <div class="form-group">
             <label >Nome:</label>
             <input type="text" class="form-control" 
@@ -20,5 +16,17 @@
               class="btn btn-primary" 
               (click)="adicionar()"
               [disabled]="nome.length == 0">Adicionar</button>       
+    </div>
+
+
+    <div class="row" style="margin-top: 20px">
+            
+            <div class="col-2" *ngFor="let funcionario of funcionarios">
+                <div class="card">
+                    <img class="card-img-top" src="https://randomuser.me/api/portraits/men/{{funcionario.id}}.jpg">
+                    <div class="card-block"><strong>{{funcionario.id}} - {{funcionario.nome}}</strong></div>
+                </div>
+            </div>
+    
     </div>
 </div>
