--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,11 +21,8 @@
 
     <div class="row" style="margin-top: 20px">
             
-            <div class="col-2" *ngFor="let funcionario of funcionarios">
-                <div class="card">
-                    <img class="card-img-top" src="https://randomuser.me/api/portraits/men/{{funcionario.id}}.jpg">
-                    <div class="card-block"><strong>{{funcionario.id}} - {{funcionario.nome}}</strong></div>
-                </div>
+            <div class="col-2" *ngFor="let f of funcionarios">
+                   <app-funcionario-card [obj]="f"></app-funcionario-card> 
             </div>
     
     </div>
