--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,7 @@
 <div class="container">
-  <h2> Iterando com a diretiva ngFor</h2>
+  <h2> Binding de eventos customizados com @Output e EventEmitter</h2>
     <div class="jumbotron">
-        <div class="alert alert-success" role="alert" *ngIf="adicionado">
-            Funcionário adicionado: <strong>{{nome}}</strong>
-        </div>
-
-          <div class="form-group">
-            <label >Nome:</label>
-            <input type="text" class="form-control" 
-            [(ngModel)]="nome"
-            (focus)="adicionado = false" >
-          </div>
-
-          <button type="button" 
-              class="btn btn-primary" 
-              (click)="adicionar()"
-              [disabled]="nome.length == 0">Adicionar</button>       
+        <app-funcionario-form (criado)="aoAdicionar($event)"></app-funcionario-form>
     </div>
 
 
